Closed Bug 1678844 Opened 4 years ago Closed 3 years ago

Japanese IME would not work properly on https://wowma.jp/

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P2)

Firefox 83
Desktop
Windows 10
defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox83 --- wontfix
firefox84 --- wontfix
firefox85 --- fixed

People

(Reporter: alice0775, Assigned: m_kato)

References

(Regression, )

Details

(Keywords: inputmethod, nightly-community, regression)

Attachments

(1 file)

Reproducible: always with MS-IME, ATOK

Steps to reproduce:

  1. Open https://wowma.jp/
  2. Focus search field on top of the page
  3. IME ON
  4. Type some word
    e.g pasokonn

Actual Results:
Composing string appears as pああssおおここnn and so on.
And these text are committed automatically.

Expected Results:
Composing string should appear as ぱそこん.
And these text should stay under construction.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=fdd37e7f4f5ba2b3def6581a26b67cdf09238872&tochange=7b96efde9ee17f2c79245b7a6047fd686d7f4621

Hi Makoto, would you mind taking a look? This seems like a regression of bug 1658948.

Flags: needinfo?(m_kato)
Assignee: nobody → m_kato
Flags: needinfo?(m_kato)
Severity: -- → S3
Priority: -- → P2

This is another regression by bug 1658948 and Windows only.

When user script calls element.focus() during keyboard event, our TSF client
implementation commits composition string.

It is unnecessary to call SetInputContext when real keybaord event is fired.

Because,

  • If keybaord event is fired, virtual keybaord is already shown
  • We don't open virtual keyboard when physical keyboard is available on Android

So I shouldn't call SetInputContext on user interaction by keyboard.

Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/84ee1d563994
Don't call SetInputContext on keyboard event. r=masayuki
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
Regressions: 1692052
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: