Bug 1678844 - Don't call SetInputContext on keyboard event. r=masayuki

This is another regression by bug 1658948 and Windows only.

When user script calls element.focus() during keyboard event, our TSF client
implementation commits composition string.

It is unnecessary to call SetInputContext when real keybaord event is fired.

Because,

- If keybaord event is fired, virtual keybaord is already shown
- We don't open virtual keyboard when physical keyboard is available on Android

So I shouldn't call SetInputContext on user interaction by keyboard.

Differential Revision: https://phabricator.services.mozilla.com/D98882